examples/test/testpolicy4745.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4745
  namespace: namespace418
spec:
  podSelector:
    matchLabels:
      key36: value45
      key40: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value17
          key42: value46
          key32: value7
      podSelector:
        matchLabels:
          key21: value47
          key38: value20
